# seoserper

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SPIKE_EXECUTION_PLAN.md  SPIKE_FINAL_ANALYSIS.md  app.py  pyproject.toml
.github/workflows/: test.yml
docs/brainstorms/: 2026-04-20-google-serp-analyzer-requirements.md  2026-04-20-suggest-http-service-requirements.md  2026-04-20-suggest-library-requirements.md  2026-04-20-suggest-only-pivot-requirements.md
docs/plans/: 2026-04-20-001-feat-google-serp-analyzer-mvp-plan.md  2026-04-20-002-feat-suggest-only-pivot-plan.md  2026-04-20-003-feat-serpapi-integration-full-serp-plan.md  2026-04-20-004-feat-post-ship-optimization-sweep-plan.md  2026-04-20-005-feat-bing-engine-support-plan.md  2026-04-20-006-feat-dual-engine-default-plan.md  2026-04-20-007-feat-suggest-library-plan.md
scripts/: README.md  capture_serp_fixture.py  reset_serp_cache.py  spike.py  spike_keywords.txt  suggest_baseline.jsonl
seoserper/: __init__.py  config.py  export.py  models.py  serpapi_account.py  storage.py  suggest.py
seoserper/core/: engine.py  render.py
seoserper/fetchers/: serp.py  serp_cache.py  suggest.py
seoserper/parsers/: __init__.py  serp.py
tests/: conftest.py  test_config.py  test_engine.py  test_export.py  test_models.py  test_render.py  test_serp_cache.py  test_serp_fetcher.py  test_serp_parser.py  test_serpapi_account.py  test_storage.py  test_suggest.py  test_suggest_cache.py  test_suggest_library.py  test_sunset.py  test_ui_smoke.py
tests/fixtures/export/: expected_all_failed.md  expected_all_ok.csv  (+3 more)
(+18 files in other folders)
