[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seoserper"
version = "0.1.0"
description = "Local-first Google SERP analyzer (Suggestions / PAA / Related Searches)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["seoserper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
